refactor: remove truck associations from Driver and Truck entities, update shipment creation logic